[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/DynamicText.gd" type="Script" id=1]
[ext_resource path="res://art/Fonts/Pixeled.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_color = Color( 0.192157, 0.266667, 0.235294, 1 )
font_data = ExtResource( 2 )

[node name="DynamicText" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 0.152941, 0.67451, 0.309804, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextCharTimer" type="Timer" parent="."]

[node name="NextMessageTimer" type="Timer" parent="."]

[connection signal="timeout" from="NextCharTimer" to="." method="_on_NextCharTimer_timeout"]
[connection signal="timeout" from="NextMessageTimer" to="." method="_on_NextMessageTimer_timeout"]
